handling errors & members fetch

--- a/_front/views/members.twig
+++ b/_front/views/members.twig
@@ -8,12 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Tous les membres</title>
   </head>
   <body class="p-5">
-    <h1 class="mb-5 text-center">Accueil</h1>
-
-
+    <h1 class="mb-5 text-center">Tous les membres</h1>
     <table class="table table-striped table-dark">
   <thead>
     <tr>
