--- a/_front/views/members.twig
+++ b/_front/views/members.twig
@@ -15,31 +15,21 @@
     <table class="table table-striped table-dark">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      {% for index, value in members[0] %}
+        <th scope="col"> {{ index }} </th>
+      {% endfor %}
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
+    {% for member in members %}
+      <tr>
+        {% for value in member %}
+          <td> {{ value }} </td>
+        {% endfor %}
+      </tr>
+      <th scope="col"> {{ index }} </th>
+    {% endfor %}
+   
   </tbody>
 </table>
     <!-- Optional JavaScript -->
