--- a/_front/views/insert.twig
+++ b/_front/views/insert.twig
@@ -8,32 +8,20 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Tous les membres</title>
+    <title>Ajout d'un membre</title>
   </head>
   <body class="p-5">
-    <h1 class="mb-5 text-center">Tous les membres</h1>
-    <table class="table table-striped table-dark">
-  <thead>
-    <tr>
-      {% for index, value in members[0] %}
-        <th scope="col"> {{ index }} </th>
-      {% endfor %}
-    </tr>
-  </thead>
-  <tbody>
-    {% for member in members %}
-      <tr  onclick="document.location='/edit/{{ member.id }}'" style="cursor:pointer">
-        {% for value in member %}
-          <td> {{ value }} </td>
-        {% endfor %}
-      </tr>
-      <th scope="col"> {{ index }} </th>
-    {% endfor %}
-   
-  </tbody>
-</table>
+    <h1 class="mb-5 text-center">Ajout d'un membre</h1>
 
-<a href="/insert" class="btn btn-dark"> Ajouter un membre </a>
+    <form action="" method="post">
+        <div class="form-group">
+          <label for="name"> {{ name }}</label>
+          <input type="text" class="form-control" id="name" name="name" placeholder="name">
+        </div>
+      <button type="submit" class="btn btn-primary">Ajouter</button>
+    </form>
+    
+    <a href="/" class="btn btn-dark mt-5"> Accueil </a>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
